kubernetes/applications/websites/flame/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flame
  labels:
    app: flame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flame
  template:
    metadata:
      labels:
        app: flame
    spec:
      containers:
      - name: flame
        image: pawelmalak/flame:2.3.1
        ports:
          - name: web
            containerPort: 5005
        volumeMounts:
          - mountPath: /app/data
            name: flame
      volumes:
        - name: flame
          persistentVolumeClaim:
            claimName: flame-pv-claim
