kubernetes/applications/websites/flame/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flame
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5005
    name: web
  selector:
    app: flame
